--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XyZerKunG</title>
-    <link rel="icon" href="https://xyzerkungz.web.app/img/icon.png">
+    <title>XyZerKunG | Developer & Content Creator</title>
+    <link rel="icon" href="https://xyzerkung.com/favicon.ico">
 </head>
 <body>
     <script>
-        window.location.href = 'https://xyzerkungz.web.app/connect/this.html'
+        window.location.href = 'https://xyzerkung.com'
     </script>
 </body>
 </html>
